@@ -1,3 +1,9 @@
+nymea-energy-plugin-consolinno (1.7.3) buster focal jammy; urgency=medium
+
+* BlackoutProtection uses execute action now
+
+ -- Tim Fischer <t.fischer@consolinno.de> Tue, 4 Jun 2024 15:04:53 +0200
+
 nymea-energy-plugin-consolinno (1.7.2) buster focal jammy; urgency=medium
 
 * Working on BlackoutProtection to handle PLim
